Cycles render artefacts with motion blur turned on #91728

Closed
opened 2021-09-26 16:20:25 +02:00 by Bernhard Engstler · 8 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: ?

Short description of error
When rendering a certain animated mesh in Cycles and with motion blur turned on, the shader seems completely broken in the render output. Viewport render works without a problem (no motion blur of course). Also, rendering with Optix throws an error and does not work at all, while CPU rendering works but with a broken shader.
GPU rendering with Optix throws the following error:

CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]) (device_optix.cpp:821)

Viewport:
ViewportRender.png

Rendered (CPU):
RenderOutput_CPU.png

Exact steps for others to reproduce the error
Open the attached file, ensure that CPU rendering is used (so it does render at all) and render with F12. If the problem does not show at the first try, render with GPU (Optix), switch back to CPU and render again.

SkinShader_RenderProblem.zip

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: ? **Short description of error** When rendering a certain animated mesh in Cycles and with motion blur turned on, the shader seems completely broken in the render output. Viewport render works without a problem (no motion blur of course). Also, rendering with Optix throws an error and does not work at all, while CPU rendering works but with a broken shader. GPU rendering with Optix throws the following error: CUDA_ERROR_ILLEGAL_ADDRESS in cuStreamSynchronize(cuda_stream[thread_index]) (device_optix.cpp:821) Viewport: ![ViewportRender.png](https://archive.blender.org/developer/F10609035/ViewportRender.png) Rendered (CPU): ![RenderOutput_CPU.png](https://archive.blender.org/developer/F10609046/RenderOutput_CPU.png) **Exact steps for others to reproduce the error** Open the attached file, ensure that CPU rendering is used (so it does render at all) and render with F12. If the problem does not show at the first try, render with GPU (Optix), switch back to CPU and render again. [SkinShader_RenderProblem.zip](https://archive.blender.org/developer/F10609102/SkinShader_RenderProblem.zip)
Author
First-time contributor

Added subscriber: @B_Engstler

Added subscriber: @B_Engstler
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm rendering errors with this model. Even in latest master with the Cycles-X merge.

The issue from testing appears to be with materials when the color having the Skintone attribute in it at some point and a bump node is attached to the material with a high strength. So you can simplify the node setup to something like this and still get issues (you can replace the subsurface scattering node with something else):
Simplified Node setup.png
Sometimes you don't even need the bump node.

I can also confirm getting errors while rendering with OptiX. Even with the latest master with the Cycles-X merge

I can confirm rendering errors with this model. Even in latest master with the Cycles-X merge. The issue from testing appears to be with materials when the `color` having the `Skintone` attribute in it at some point and a bump node is attached to the material with a high strength. So you can simplify the node setup to something like this and still get issues (you can replace the subsurface scattering node with something else): ![Simplified Node setup.png](https://archive.blender.org/developer/F10621444/Simplified_Node_setup.png) Sometimes you don't even need the bump node. I can also confirm getting errors while rendering with OptiX. Even with the latest master with the Cycles-X merge
First-time contributor

This issue was referenced by blender/cycles@cbf5c89bae

This issue was referenced by blender/cycles@cbf5c89baeeb39c082542a53bfd49ef88891d985
First-time contributor

This issue was referenced by 5d8a7ba7de

This issue was referenced by 5d8a7ba7deb39863c60e49bfe694dfde6d3b488b
First-time contributor

This issue was referenced by 5bea5e25d5

This issue was referenced by 5bea5e25d52fe26b53928781ec0b1f5d4ddf5ad0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-27 17:45:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91728
No description provided.