Fix T91728: Cycles render artifacts with motion blur and object attributes